--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,11 @@
     <div class="navbar-collapse">
       <ul class="nav navbar-nav">
         <li routerLinkActive="active"><a routerLink="auth">Authentification</a></li>
-        <li class="active"><a routerLink="matieres">Matieres</a></li>
+        <li routerLinkActive="active"><a routerLink="matieres">Matieres</a></li>
       </ul>
+      <div class="navbar-right">
+          <p>Vous êtes connecté depuis {{ secondes }} secondes !</p>
+      </div>
     </div>
   </div>
 </nav>
