--- a/src/app/matiere-view/matiere-view.component.html
+++ b/src/app/matiere-view/matiere-view.component.html
@@ -1,4 +1,4 @@
-<h2>Matiere</h2>
+<h2>Matieres</h2>
 <ul class="list-group">
   <app-matiere  *ngFor="let matiere of matieres; let i = index"
                  [matiereName]="matiere.name"
