--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,10 @@
-<!-- <app-nav-bar></app-nav-bar> -->
-
-<!-- <app-matieres [matieresName]="matieresOne" [matieresStatus]="'éteint'"></app-matieres>
-<app-matieres [matieresName]="matieresTwo" [matieresStatus]="'éteint'"></app-matieres>
-<app-matieres [matieresName]="matieresthree" [matieresStatus]="'allumé'"></app-matieres> -->
-
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-collapse">
       <ul class="nav navbar-nav">
         <li routerLinkActive="active"><a routerLink="auth">Authentification</a></li>
         <li routerLinkActive="active"><a routerLink="matieres">Matieres</a></li>
+        <li routerLinkActive="active"><a routerLink="edit">Nouvelle matiere</a></li>
       </ul>
       <div class="navbar-right">
           <p>Mis à jour : {{ lastUpdate | async | date: 'EEEE d MMMM y' | uppercase }}</p>
@@ -26,5 +21,3 @@
     </div>
   </div>
 </div>
-
-<!-- <router-outlet></router-outlet> -->
