--- a/src/app/edit-matiere/edit-matiere.component.html
+++ b/src/app/edit-matiere/edit-matiere.component.html
@@ -8,6 +8,12 @@
         <input type="text" id="name" class="form-control" name="name" ngModel required>
       </div>
       <div class="form-group">
+        <label for="like">
+          tape un chiffre
+        </label>
+        <input type="number" id="like" class="form-control" name="like" ngModel >
+      </div>
+      <div class="form-group">
         <label for="status">
           État de la matiere
         </label>
