FIX update listSelect in new-user

--- a/src/app/new-user/new-user.component.html
+++ b/src/app/new-user/new-user.component.html
@@ -13,10 +13,16 @@
       <input type="text" id="email" class="form-control" formControlName="email">
     </div>
     <div class="form-group">
-      <label for="drinkPreference">Quelle boisson préférez-vous ?</label>
+      <label for="drinkPreference">Quelle Matiere préférez-vous ?</label>
       <select id="drinkPreference" class="form-control" formControlName="drinkPreference">
-        <option value="jus d\'orange">Jus d'orange</option>
-        <option value="jus de mangue">Jus de mangue</option>
+        <option value="Php">Php</option>
+        <option value="Java">Java</option>
+        <option value="Algo">Algo</option>
+        <option value="Laravel">Laravel</option>
+        <option value="Java">Javascript</option>
+        <option value="React Native">React Native</option>
+        <option value="Html / Css">Html / Css</option>
+        <option value="Git Hub">Git Hub</option>
       </select>
     </div>
     <div formArrayName="hobbies">
