NEW add dislike display and fct

--- a/src/app/edit-matiere/edit-matiere.component.html
+++ b/src/app/edit-matiere/edit-matiere.component.html
@@ -9,9 +9,15 @@
       </div>
       <div class="form-group">
         <label for="like">
-          tape un chiffre
+          <!--tape un chiffre-->
         </label>
-        <input type="number" id="like" class="form-control" name="like" ngModel >
+        <input type="hidden" id="like" class="form-control" name="like" ngModel >
+      </div>
+      <div class="form-group">
+        <label for="dislike">
+          <!--tape un chiffre-->
+        </label>
+        <input type="hidden" id="dislike" class="form-control" name="dislike" ngModel >
       </div>
       <div class="form-group">
         <label for="status">
