--- a/src/app/matiere-view/matiere-view.component.html
+++ b/src/app/matiere-view/matiere-view.component.html
@@ -4,6 +4,7 @@
                  [matiereName]="matiere.name"
                  [matiereStatus]="matiere.status"
                  [matiereLike]="matiere.like"
+                 [matiereDislike]="matiere.dislike"
                  [index]="i"
                  [id]="matiere.id"></app-matiere>
 </ul>
