--- a/src/app/single-matiere/single-matiere.component.html
+++ b/src/app/single-matiere/single-matiere.component.html
@@ -1,4 +1,5 @@
 <h2>{{ name }}</h2>
 <p>Statut : {{ status }}</p>
 <p>Like : {{ like }}</p>
+<p>Dislike : {{ dislike }}</p>
 <a routerLink="/matieres">Retour à la liste</a>
