--- a/src/app/matiere-view/matiere-view.component.html
+++ b/src/app/matiere-view/matiere-view.component.html
@@ -12,4 +12,10 @@
         (click)="onAllumer()">Tout allumer</button>
 
 <button class="btn btn-danger"
-        (click)="onEteindre()">Tout éteindre</button>
+        (click)="onEteindre()" style="margin-left: 10px;">Tout éteindre</button>
+
+<button class="btn btn-success"
+        (click)="allLike()" style="margin-left: 100px;">Tout liker</button>
+
+<button class="btn btn-danger"
+        (click)="allDislike()" style="margin-left: 10px;">Tout disliker</button>
