--- a/src/app/matiere/matiere.component.html
+++ b/src/app/matiere/matiere.component.html
@@ -23,9 +23,9 @@
           (click)="onSwitch()">Eteindre</button>
 
   <button class="btn btn-sm"
-          (click)="onLike()">LIKE</button>
+          (click)="onLike()" style="margin-left: 100px;">LIKE</button>
 
   <button class="btn btn-sm"
-          (click)="onDislike()">DISLIKE</button>
+          (click)="onDislike()" style="margin-left: 10px;">DISLIKE</button>
 
 </li>
