FIX type of like dislike in edit-matiere

--- a/src/app/edit-matiere/edit-matiere.component.html
+++ b/src/app/edit-matiere/edit-matiere.component.html
@@ -11,13 +11,13 @@
         <label for="like">
           <!--tape un chiffre-->
         </label>
-        <input type="hidden" id="like" class="form-control" name="like" ngModel >
+        <input type="hidden" value=0 id="like" class="form-control" name="like" ngModel >
       </div>
       <div class="form-group">
         <label for="dislike">
           <!--tape un chiffre-->
         </label>
-        <input type="hidden" id="dislike" class="form-control" name="dislike" ngModel >
+        <input type="hidden" value=0 id="dislike" class="form-control" name="dislike" ngModel >
       </div>
       <div class="form-group">
         <label for="status">
