FIX delete matiere ok with splice

--- a/src/app/matiere/matiere.component.html
+++ b/src/app/matiere/matiere.component.html
@@ -28,4 +28,7 @@
   <button class="btn btn-sm"
           (click)="onDislike()" style="margin-left: 10px;">DISLIKE</button>
 
+  <button class="btn btn-sm"
+          (click)="delete()" style="margin-left: 100px;">delete</button>
+
 </li>
