NEW display flex or none to connect in auth

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,9 +1,4 @@
 <h2>Authentification</h2>
-
-
-
-
-
 <div class="row">
   <div class="col-sm-8 col-sm-offset-2">
     <form (ngSubmit)="onSubmit(x)" #x="ngForm">
@@ -11,11 +6,11 @@
         <label for="password">
           tape le password
         </label>
-        <input type="text" id="password" class="form-control" name="password" ngModel required>
+        <input type="text" id="password" class="form-control" name="password" ngModel required >
       </div>
       <button class="btn btn-primary" type="submit" [disabled]="x.invalid">valider</button>
     </form>
-    <button class="btn btn-success" *ngIf="!authStatus" (click)="onSignIn()" [disabled]="x.invalid">Se connecter</button>
+    <button class="btn btn-success" *ngIf="!authStatus" (click)="onSignIn()" class=" {{ styleInfoConnect }} ">Se connecter</button>
     <button class="btn btn-danger" *ngIf="authStatus" (click)="onSignOut()">Se déconnecter</button>
   </div>
 </div>
